Fix: Pug overlapping with hr element

--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -118,10 +118,10 @@ body {
 }
 .container.home {
   position: relative;
-  height: 500px;
+  height: 490px;
 }
 hr .ml15 .mr15 {
-  margin-top: 150px;
+  margin-top: 200px;
   border: none;
   height: 1px;
   color: #d5d5d5;
